# ambassador

./: .gitattributes  .gitignore  BUILD.bazel  WORKSPACE
api/envoy/admin/v2alpha/: BUILD.bazel
api/envoy/admin/v3/: BUILD.bazel
api/envoy/admin/v4alpha/: BUILD.bazel
api/envoy/annotations/: BUILD.bazel
api/envoy/api/v2/: BUILD.bazel
api/envoy/api/v2/auth/: BUILD.bazel
api/envoy/api/v2/cluster/: BUILD.bazel
api/envoy/api/v2/core/: BUILD.bazel
api/envoy/api/v2/endpoint/: BUILD.bazel
api/envoy/api/v2/listener/: BUILD.bazel
api/envoy/api/v2/ratelimit/: BUILD.bazel
api/envoy/api/v2/route/: BUILD.bazel
api/envoy/config/accesslog/v2/: BUILD.bazel
api/envoy/config/accesslog/v3/: BUILD.bazel
api/envoy/config/bootstrap/v2/: BUILD.bazel
api/envoy/config/bootstrap/v3/: BUILD.bazel
api/envoy/config/bootstrap/v4alpha/: BUILD.bazel
api/envoy/config/cluster/aggregate/v2alpha/: BUILD.bazel
api/envoy/config/cluster/dynamic_forward_proxy/v2alpha/: BUILD.bazel
api/envoy/config/cluster/redis/: BUILD.bazel
api/envoy/config/cluster/v3/: BUILD.bazel
api/envoy/config/cluster/v4alpha/: BUILD.bazel
api/envoy/config/common/dynamic_forward_proxy/v2alpha/: BUILD.bazel
api/envoy/config/common/tap/v2alpha/: BUILD.bazel
api/envoy/config/core/v3/: BUILD.bazel
api/envoy/config/core/v4alpha/: BUILD.bazel
api/envoy/config/endpoint/v3/: BUILD.bazel
api/envoy/config/filter/accesslog/v2/: BUILD.bazel
api/envoy/config/filter/fault/v2/: BUILD.bazel
api/envoy/config/grpc_credential/v2alpha/: BUILD.bazel
api/envoy/config/grpc_credential/v3/: BUILD.bazel
api/envoy/config/health_checker/redis/v2/: BUILD.bazel
api/envoy/config/listener/v2/: BUILD.bazel
api/envoy/config/listener/v3/: BUILD.bazel
api/envoy/config/metrics/v2/: BUILD.bazel
api/envoy/config/metrics/v3/: BUILD.bazel
api/envoy/config/overload/v2alpha/: BUILD.bazel
api/envoy/config/overload/v3/: BUILD.bazel
api/envoy/config/ratelimit/v2/: BUILD.bazel
api/envoy/config/ratelimit/v3/: BUILD.bazel
api/envoy/config/rbac/v2/: BUILD.bazel
api/envoy/config/rbac/v3/: BUILD.bazel
api/envoy/config/rbac/v4alpha/: BUILD.bazel
api/envoy/config/resource_monitor/fixed_heap/v2alpha/: BUILD.bazel
api/envoy/config/resource_monitor/injected_resource/v2alpha/: BUILD.bazel
api/envoy/config/retry/omit_canary_hosts/v2/: BUILD.bazel
api/envoy/config/retry/omit_host_metadata/v2/: BUILD.bazel
api/envoy/config/retry/previous_hosts/v2/: BUILD.bazel
api/envoy/config/retry/previous_priorities/: BUILD.bazel
api/envoy/config/route/v3/: BUILD.bazel
api/envoy/config/route/v4alpha/: BUILD.bazel
api/envoy/config/tap/v3/: BUILD.bazel
api/envoy/config/trace/v2/: BUILD.bazel
api/envoy/config/trace/v2alpha/: BUILD.bazel
api/envoy/config/trace/v3/: BUILD.bazel
api/envoy/config/trace/v4alpha/: BUILD.bazel
api/envoy/config/transport_socket/alts/v2alpha/: BUILD.bazel
api/envoy/config/transport_socket/raw_buffer/v2/: BUILD.bazel
api/envoy/config/transport_socket/tap/v2alpha/: BUILD.bazel
api/envoy/config/wasm/v2alpha/: BUILD.bazel
api/envoy/data/accesslog/v2/: BUILD.bazel
api/envoy/data/accesslog/v3/: BUILD.bazel
api/envoy/data/cluster/v2alpha/: BUILD.bazel
api/envoy/data/cluster/v3/: BUILD.bazel
api/envoy/data/core/v2alpha/: BUILD.bazel
api/envoy/data/core/v3/: BUILD.bazel
api/envoy/data/dns/v2alpha/: BUILD.bazel
api/envoy/data/dns/v3/: BUILD.bazel
api/envoy/data/tap/v2alpha/: BUILD.bazel
api/envoy/data/tap/v3/: BUILD.bazel
api/envoy/extensions/access_loggers/file/v3/: BUILD.bazel
api/envoy/extensions/access_loggers/grpc/v3/: BUILD.bazel
api/envoy/extensions/clusters/aggregate/v3/: BUILD.bazel
api/envoy/extensions/clusters/dynamic_forward_proxy/v3/: BUILD.bazel
api/envoy/extensions/clusters/redis/v3/: BUILD.bazel
api/envoy/extensions/common/dynamic_forward_proxy/v3/: BUILD.bazel
api/envoy/extensions/common/ratelimit/v3/: BUILD.bazel
api/envoy/extensions/common/tap/v3/: BUILD.bazel
api/envoy/extensions/common/tap/v4alpha/: BUILD.bazel
api/envoy/extensions/transport_sockets/alts/v3/: BUILD.bazel
api/envoy/extensions/transport_sockets/raw_buffer/v3/: BUILD.bazel
api/envoy/extensions/transport_sockets/tap/v3/: BUILD.bazel
api/envoy/extensions/transport_sockets/tap/v4alpha/: BUILD.bazel
api/envoy/extensions/wasm/v3/: BUILD.bazel
api/envoy/service/accesslog/v2/: BUILD.bazel
api/envoy/service/accesslog/v3/: BUILD.bazel
api/envoy/service/auth/v2/: BUILD.bazel
api/envoy/service/auth/v2alpha/: BUILD.bazel
api/envoy/service/auth/v3/: BUILD.bazel
api/envoy/service/cluster/v3/: BUILD.bazel
api/envoy/service/discovery/v2/: BUILD.bazel
api/envoy/service/discovery/v3/: BUILD.bazel
api/envoy/service/endpoint/v3/: BUILD.bazel
api/envoy/service/event_reporting/v2alpha/: BUILD.bazel
api/envoy/service/event_reporting/v3/: BUILD.bazel
api/envoy/service/health/v3/: BUILD.bazel
api/envoy/service/listener/v3/: BUILD.bazel
api/envoy/service/load_stats/v2/: BUILD.bazel
api/envoy/service/load_stats/v3/: BUILD.bazel
api/envoy/service/metrics/v2/: BUILD.bazel
api/envoy/service/metrics/v3/: BUILD.bazel
api/envoy/service/ratelimit/v1/: BUILD.bazel
api/envoy/service/ratelimit/v2/: BUILD.bazel
api/envoy/service/ratelimit/v3/: BUILD.bazel
api/envoy/service/route/v3/: BUILD.bazel
api/envoy/service/runtime/v3/: BUILD.bazel
api/envoy/service/secret/v3/: BUILD.bazel
api/envoy/service/status/v2/: BUILD.bazel
api/envoy/service/status/v3/: BUILD.bazel
api/envoy/service/tap/v2alpha/: BUILD.bazel
api/envoy/service/tap/v3/: BUILD.bazel
api/envoy/service/trace/v2/: BUILD.bazel
api/envoy/service/trace/v3/: BUILD.bazel
api/envoy/type/: BUILD.bazel
api/envoy/type/matcher/: BUILD.bazel
api/envoy/type/matcher/v3/: BUILD.bazel
api/envoy/type/metadata/v2/: BUILD.bazel
api/envoy/type/metadata/v3/: BUILD.bazel
api/envoy/type/tracing/v2/: BUILD.bazel
api/envoy/type/tracing/v3/: BUILD.bazel
api/envoy/type/v3/: BUILD.bazel
api/getambassador.io/v2/: BUILD.bazel
api/kat/: BUILD.bazel
docker/test-ratelimit/: BUILD.bazel
(+114 files in other folders)
