load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "v2_proto",
    srcs = [
        "Host.proto",
        "Host_nojson.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//getambassador.io/v2:v2_proto",
        "//github.com/gogo/protobuf/gogoproto:gogoproto_proto",
        "//k8s.io/api/core/v1:v1_proto",
        "//k8s.io/apimachinery/pkg/apis/meta/v1:v1_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "v2_go_proto",
    importpath = "github.com/datawire/ambassador/api/getambassador.io/v2",
    proto = ":v2_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//getambassador.io/v2:go_default_library",
        "//github.com/gogo/protobuf/gogoproto:go_default_library",
        "//k8s.io/api/core/v1:go_default_library",
        "//k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
    ],
)
