load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "v2_proto",
    srcs = [
        "cds.proto",
        "cluster.proto",
        "discovery.proto",
        "eds.proto",
        "endpoint.proto",
        "lds.proto",
        "listener.proto",
        "rds.proto",
        "route.proto",
        "scoped_route.proto",
        "srds.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//envoy/annotations:annotations_proto",
        "//envoy/api/v2:v2_proto",
        "//envoy/api/v2/auth:auth_proto",
        "//envoy/api/v2/cluster:cluster_proto",
        "//envoy/api/v2/core:core_proto",
        "//envoy/api/v2/endpoint:endpoint_proto",
        "//envoy/api/v2/listener:listener_proto",
        "//envoy/api/v2/route:route_proto",
        "//envoy/config/filter/accesslog/v2:v2_proto",
        "//envoy/config/listener/v2:v2_proto",
        "//envoy/type:type_proto",
        "//udpa/annotations:annotations_proto",
        "//validate:validate_proto",
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:struct_proto",
        "@com_google_protobuf//:wrappers_proto",
        "@go_googleapis//google/api:annotations_proto",
        "@go_googleapis//google/rpc:status_proto",
    ],
)
