load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "matcher_proto",
    srcs = [
        "metadata.proto",
        "node.proto",
        "number.proto",
        "path.proto",
        "regex.proto",
        "string.proto",
        "struct.proto",
        "value.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//envoy/annotations:annotations_proto",
        "//envoy/type:type_proto",
        "//envoy/type/matcher:matcher_proto",
        "//udpa/annotations:annotations_proto",
        "//validate:validate_proto",
        "@com_google_protobuf//:wrappers_proto",
    ],
)
