load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "v3_proto",
    srcs = [
        "hash_policy.proto",
        "http.proto",
        "http_status.proto",
        "percent.proto",
        "range.proto",
        "semantic_version.proto",
        "token_bucket.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//udpa/annotations:annotations_proto",
        "//validate:validate_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:wrappers_proto",
    ],
)
