load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "cluster_proto",
    srcs = [
        "circuit_breaker.proto",
        "filter.proto",
        "outlier_detection.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//envoy/api/v2/core:core_proto",
        "//envoy/type:type_proto",
        "//udpa/annotations:annotations_proto",
        "//validate:validate_proto",
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:wrappers_proto",
    ],
)
