load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "endpoint_proto",
    srcs = [
        "endpoint.proto",
        "endpoint_components.proto",
        "load_report.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//envoy/api/v2/core:core_proto",
        "//envoy/api/v2/endpoint:endpoint_proto",
        "//udpa/annotations:annotations_proto",
        "//validate:validate_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:struct_proto",
        "@com_google_protobuf//:wrappers_proto",
    ],
)
