load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "listener_proto",
    srcs = [
        "listener.proto",
        "listener_components.proto",
        "quic_config.proto",
        "udp_listener_config.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//envoy/api/v2/auth:auth_proto",
        "//envoy/api/v2/core:core_proto",
        "//envoy/api/v2/listener:listener_proto",
        "//envoy/type:type_proto",
        "//udpa/annotations:annotations_proto",
        "//validate:validate_proto",
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:struct_proto",
        "@com_google_protobuf//:wrappers_proto",
    ],
)
