load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "route_proto",
    srcs = [
        "route.proto",
        "route_components.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//envoy/annotations:annotations_proto",
        "//envoy/api/v2/core:core_proto",
        "//envoy/api/v2/route:route_proto",
        "//envoy/type:type_proto",
        "//envoy/type/matcher:matcher_proto",
        "//envoy/type/tracing/v2:v2_proto",
        "//udpa/annotations:annotations_proto",
        "//validate:validate_proto",
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:struct_proto",
        "@com_google_protobuf//:wrappers_proto",
    ],
)
