load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "v3_proto",
    srcs = ["accesslog.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//envoy/config/core/v3:v3_proto",
        "//envoy/config/route/v3:v3_proto",
        "//envoy/type/v3:v3_proto",
        "//udpa/annotations:annotations_proto",
        "//validate:validate_proto",
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:struct_proto",
    ],
)
