load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "redis_proto",
    srcs = ["redis_cluster.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//udpa/annotations:annotations_proto",
        "//validate:validate_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:wrappers_proto",
    ],
)
