load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "v3_proto",
    srcs = [
        "api_listener.proto",
        "listener.proto",
        "listener_components.proto",
        "quic_config.proto",
        "udp_listener_config.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//envoy/config/accesslog/v3:v3_proto",
        "//envoy/config/core/v3:v3_proto",
        "//envoy/config/listener/v3:v3_proto",
        "//envoy/type/v3:v3_proto",
        "//udpa/annotations:annotations_proto",
        "//validate:validate_proto",
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:struct_proto",
        "@com_google_protobuf//:wrappers_proto",
        "@go_googleapis//google/api:annotations_proto",
    ],
)
