load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "v2_proto",
    srcs = ["rbac.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//envoy/api/v2/core:core_proto",
        "//envoy/api/v2/route:route_proto",
        "//envoy/type/matcher:matcher_proto",
        "//udpa/annotations:annotations_proto",
        "//validate:validate_proto",
        "@go_googleapis//google/api/expr/v1alpha1:expr_proto",
    ],
)
