load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "v4alpha_proto",
    srcs = ["rbac.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//envoy/config/core/v4alpha:v4alpha_proto",
        "//envoy/config/route/v4alpha:v4alpha_proto",
        "//envoy/type/matcher/v3:v3_proto",
        "//udpa/annotations:annotations_proto",
        "//validate:validate_proto",
        "@go_googleapis//google/api/expr/v1alpha1:expr_proto",
    ],
)
