load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "previous_priorities_proto",
    srcs = ["previous_priorities_config.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//udpa/annotations:annotations_proto",
        "//validate:validate_proto",
    ],
)
