load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "v2alpha_proto",
    srcs = ["outlier_detection_event.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//udpa/annotations:annotations_proto",
        "//validate:validate_proto",
        "@com_google_protobuf//:timestamp_proto",
        "@com_google_protobuf//:wrappers_proto",
    ],
)
